src/jminusminus/Parser.java
// Copyright 2013 Bill Campbell, Swami Iyer and Bahar Akbal-Delibas

package jminusminus;

import java.util.ArrayList;

import static jminusminus.TokenKind.*;

/**
 * A recursive descent parser that, given a lexical analyzer (a
 * LookaheadScanner), parses a Java compilation unit (program file), taking
 * tokens from the LookaheadScanner, and produces an abstract syntax tree (AST)
 * for it.
 */

public class Parser {

	/** The lexical analyzer with which tokens are scanned. */
	private LookaheadScanner scanner;

	/** Whether a parser error has been found. */
	private boolean isInError;

	/** Wheter we have recovered from a parser error. */
	private boolean isRecovered;

	/**
	 * Construct a parser from the given lexical analyzer.
	 * 
	 * @param scanner the lexical analyzer with which tokens are scanned.
	 */

	public Parser(LookaheadScanner scanner) {
		this.scanner = scanner;
		isInError = false;
		isRecovered = true;
		scanner.next(); // Prime the pump
	}

	/**
	 * Has a parser error occurred up to now?
	 * 
	 * @return true or false.
	 */

	public boolean errorHasOccurred() {
		return isInError;
	}

	// ////////////////////////////////////////////////
	// Parsing Support ///////////////////////////////
	// ////////////////////////////////////////////////

	/**
	 * Is the current token this one?
	 * 
	 * @param sought the token we're looking for.
	 * @return true iff they match; false otherwise.
	 */

	private boolean see(TokenKind sought) {
		return (sought == scanner.token().kind());
	}

	/**
	 * Look at the current (unscanned) token to see if it's one we're looking for.
	 * If so, scan it and return true; otherwise return false (without scanning a
	 * thing).
	 * 
	 * @param sought the token we're looking for.
	 * @return true iff they match; false otherwise.
	 */

	private boolean have(TokenKind sought) {
		if (see(sought)) {
			scanner.next();
			return true;
		} else {
			return false;
		}
	}

	/**
	 * Attempt to match a token we're looking for with the current input token. If
	 * we succeed, scan the token and go into a "isRecovered" state. If we fail,
	 * then what we do next depends on whether or not we're currently in a
	 * "isRecovered" state: if so, we report the error and go into an "Unrecovered"
	 * state; if not, we repeatedly scan tokens until we find the one we're looking
	 * for (or EOF) and then return to a "isRecovered" state. This gives us a kind
	 * of poor man's syntactic error recovery. The strategy is due to David Turner
	 * and Ron Morrison.
	 * 
	 * @param sought the token we're looking for.
	 */

	private void mustBe(TokenKind sought) {
		if (scanner.token().kind() == sought) {
			scanner.next();
			isRecovered = true;
		} else if (isRecovered) {
			isRecovered = false;
			reportParserError("%s found where %s sought", scanner.token().image(), sought.image());
		} else {
			// Do not report the (possibly spurious) error,
			// but rather attempt to recover by forcing a match.
			while (!see(sought) && !see(EOF)) {
				scanner.next();
			}
			if (see(sought)) {
				scanner.next();
				isRecovered = true;
			}
		}
	}

	/**
	 * Pull out the ambiguous part of a name and return it.
	 * 
	 * @param name with an ambiguos part (possibly).
	 * @return ambiguous part or null.
	 */

	private AmbiguousName ambiguousPart(TypeName name) {
		String qualifiedName = name.toString();
		int lastDotIndex = qualifiedName.lastIndexOf('.');
		return lastDotIndex == -1 ? null // It was a simple
				// name
				: new AmbiguousName(name.line(), qualifiedName.substring(0, lastDotIndex));
	}

	/**
	 * Report a syntax error.
	 * 
	 * @param message message identifying the error.
	 * @param args    related values.
	 */

	private void reportParserError(String message, Object... args) {
		isInError = true;
		isRecovered = false;
		System.err.printf("%s:%d: ", scanner.fileName(), scanner.token().line());
		System.err.printf(message, args);
		System.err.println();
	}

	// ////////////////////////////////////////////////
	// Lookahead /////////////////////////////////////
	// ////////////////////////////////////////////////

	/**
	 * Are we looking at an IDENTIFIER followed by a LPAREN? Look ahead to find out.
	 * 
	 * @return true iff we're looking at IDENTIFIER LPAREN; false otherwise.
	 */

	private boolean seeIdentLParen() {
		scanner.recordPosition();
		boolean result = have(IDENTIFIER) && see(LPAREN);
		scanner.returnToPosition();
		return result;
	}

	/**
	 * Are we looking at a cast? ie.
	 * 
	 * <pre>
	 *   LPAREN type RPAREN ...
	 * </pre>
	 * 
	 * Look ahead to find out.
	 * 
	 * @return true iff we're looking at a cast; false otherwise.
	 */

	private boolean seeCast() {
		scanner.recordPosition();
		if (!have(LPAREN)) {
			scanner.returnToPosition();
			return false;
		}
		if (seeBasicType()) {
			scanner.returnToPosition();
			return true;
		}
		if (!see(IDENTIFIER)) {
			scanner.returnToPosition();
			return false;
		} else {
			scanner.next(); // Scan the IDENTIFIER
			// A qualified identifier is ok
			while (have(DOT)) {
				if (!have(IDENTIFIER)) {
					scanner.returnToPosition();
					return false;
				}
			}
		}
		while (have(LBRACK)) {
			if (!have(RBRACK)) {
				scanner.returnToPosition();
				return false;
			}
		}
		if (!have(RPAREN)) {
			scanner.returnToPosition();
			return false;
		}
		scanner.returnToPosition();
		return true;
	}

	/**
	 * Are we looking at a local variable declaration? ie.
	 * 
	 * <pre>
	 *   type IDENTIFIER {LBRACK RBRACK} ...
	 * </pre>
	 * 
	 * Look ahead to determine.
	 * 
	 * @return true iff we are looking at local variable declaration; false
	 *         otherwise.
	 */

	private boolean seeLocalVariableDeclaration() {
		scanner.recordPosition();
		if (have(IDENTIFIER)) {
			// A qualified identifier is ok
			while (have(DOT)) {
				if (!have(IDENTIFIER)) {
					scanner.returnToPosition();
					return false;
				}
			}
		} else if (seeBasicType()) {
			scanner.next();
		} else {
			scanner.returnToPosition();
			return false;
		}
		while (have(LBRACK)) {
			if (!have(RBRACK)) {
				scanner.returnToPosition();
				return false;
			}
		}
		if (!have(IDENTIFIER)) {
			scanner.returnToPosition();
			return false;
		}
		while (have(LBRACK)) {
			if (!have(RBRACK)) {
				scanner.returnToPosition();
				return false;
			}
		}
		scanner.returnToPosition();
		return true;
	}

	/**
	 * Are we looking at a for each expression? i.e.
	 * 
	 * <pre>
	 *   formalParameter COLON ...
	 * </pre>
	 * 
	 * Look ahead to determine.
	 * 
	 * @return true iff we are looking at a for each expression; false otherwise.
	 */

	private boolean seeForEachExpression() {
		scanner.recordPosition();
		if (!haveReferenceType()) {
			if (seeBasicType()) {
				scanner.next();
			} else {
				scanner.returnToPosition();
				return false;
			}
		}
		if (!see(IDENTIFIER)) {
			scanner.returnToPosition();
			return false;
		}
		scanner.next();
		if (!see(COLON)) {
			scanner.returnToPosition();
			return false;
		}
		scanner.returnToPosition();
		return true;
	}

	/**
	 * Are we looking at a basic type? ie.
	 * 
	 * <pre>
	 * BOOLEAN | CHAR | INT
	 * </pre>
	 * 
	 * @return true iff we're looking at a basic type; false otherwise.
	 */

	private boolean seeBasicType() {
		if (see(BOOLEAN) || see(CHAR) || see(INT) || see(DOUBLE)) {
			return true;
		} else {
			return false;
		}
	}

	/**
	 * Are we looking at a reference type? ie.
	 * 
	 * <pre>
	 *   referenceType ::= basicType LBRACK RBRACK {LBRACK RBRACK}
	 *                   | qualifiedIdentifier {LBRACK RBRACK}
	 * </pre>
	 * 
	 * @return true iff we're looking at a reference type; false otherwise.
	 */

	private boolean seeReferenceType() {
		if (see(IDENTIFIER)) {
			return true;
		} else {
			scanner.recordPosition();
			if (have(BOOLEAN) || have(CHAR) || have(INT)) {
				if (have(LBRACK) && see(RBRACK)) {
					scanner.returnToPosition();
					return true;
				}
			}
			scanner.returnToPosition();
		}
		return false;
	}

	/**
	 * Are we looking at a reference type? Consume tokens if so.
	 * 
	 * @return true iff we're looking at a reference type; false otherwise.
	 */

	private boolean haveReferenceType() {
		if (have(IDENTIFIER)) {
			return true;
		} else {
			scanner.recordPosition();
			if (have(BOOLEAN) || have(CHAR) || have(INT)) {
				if (have(LBRACK) && have(RBRACK)) {
					scanner.returnToPosition();
					// We have to return to position to disable 'lookahead mode'
					// not the most elegant
					scanner.next();
					scanner.next();
					scanner.next();
					return true;
				}
			}
			scanner.returnToPosition();
			return false;
		}
	}

	/**
	 * Are we looking at []?
	 * 
	 * @return true iff we're looking at a [] pair; false otherwise.
	 */

	private boolean seeDims() {
		scanner.recordPosition();
		boolean result = have(LBRACK) && see(RBRACK);
		scanner.returnToPosition();
		return result;
	}

	// ////////////////////////////////////////////////
	// Parser Proper /////////////////////////////////
	// ////////////////////////////////////////////////

	/**
	 * Parse a compilation unit (a program file) and construct an AST for it. After
	 * constructing the Parser, this is its entry point.
	 * 
	 * <pre>
	 *   compilationUnit ::= [PACKAGE qualifiedIdentifier SEMI]
	 *                       {IMPORT  qualifiedIdentifier SEMI}
	 *                       {typeDeclaration}
	 *                       EOF
	 * </pre>
	 * 
	 * @return an AST for a compilationUnit.
	 */

	public JCompilationUnit compilationUnit() {
		int line = scanner.token().line();
		TypeName packageName = null; // Default
		if (have(PACKAGE)) {
			packageName = qualifiedIdentifier();
			mustBe(SEMI);
		}
		ArrayList<TypeName> imports = new ArrayList<TypeName>();
		while (have(IMPORT)) {
			imports.add(qualifiedIdentifier());
			mustBe(SEMI);
		}
		ArrayList<JAST> typeDeclarations = new ArrayList<JAST>();
		while (!see(EOF)) {
			JAST typeDeclaration = typeDeclaration();
			if (typeDeclaration != null) {
				typeDeclarations.add(typeDeclaration);
			}
		}
		mustBe(EOF);
		return new JCompilationUnit(scanner.fileName(), line, packageName, imports, typeDeclarations);
	}

	/**
	 * Parse a qualified identifier.
	 * 
	 * <pre>
	 *   qualifiedIdentifier ::= IDENTIFIER {DOT IDENTIFIER}
	 * </pre>
	 * 
	 * @return an instance of TypeName.
	 */

	private TypeName qualifiedIdentifier() {
		int line = scanner.token().line();
		mustBe(IDENTIFIER);
		String qualifiedIdentifier = scanner.previousToken().image();
		while (have(DOT)) {
			mustBe(IDENTIFIER);
			qualifiedIdentifier += "." + scanner.previousToken().image();
		}
		return new TypeName(line, qualifiedIdentifier);
	}

	/**
	 * Parse a type declaration.
	 * 
	 * <pre>
	 *   typeDeclaration ::= modifiers classDeclaration
	 * </pre>
	 * 
	 * @return an AST for a typeDeclaration.
	 */

	private JAST typeDeclaration() {
		ArrayList<String> mods = modifiers();
		if (see(CLASS)) {
			return classDeclaration(mods);
		} else {
			return interfaceDeclaration(mods);
		}
	}

	/**
	 * Parse modifiers.
	 * 
	 * <pre>
	 *   modifiers ::= {PUBLIC | PROTECTED | PRIVATE | STATIC | 
	 *                  ABSTRACT}
	 * </pre>
	 * 
	 * Check for duplicates, and conflicts among access modifiers (public,
	 * protected, and private). Otherwise, no checks.
	 * 
	 * @return a list of modifiers.
	 */

	private ArrayList<String> modifiers() {
		ArrayList<String> mods = new ArrayList<String>();
		boolean scannedPUBLIC = false;
		boolean scannedPROTECTED = false;
		boolean scannedPRIVATE = false;
		boolean scannedSTATIC = false;
		boolean scannedABSTRACT = false;
		boolean more = true;
		while (more)
			if (have(PUBLIC)) {
				mods.add("public");
				if (scannedPUBLIC) {
					reportParserError("Repeated modifier: public");
				}
				if (scannedPROTECTED || scannedPRIVATE) {
					reportParserError("Access conflict in modifiers");
				}
				scannedPUBLIC = true;
			} else if (have(PROTECTED)) {
				mods.add("protected");
				if (scannedPROTECTED) {
					reportParserError("Repeated modifier: protected");
				}
				if (scannedPUBLIC || scannedPRIVATE) {
					reportParserError("Access conflict in modifiers");
				}
				scannedPROTECTED = true;
			} else if (have(PRIVATE)) {
				mods.add("private");
				if (scannedPRIVATE) {
					reportParserError("Repeated modifier: private");
				}
				if (scannedPUBLIC || scannedPROTECTED) {
					reportParserError("Access conflict in modifiers");
				}
				scannedPRIVATE = true;
			} else if (have(STATIC)) {
				mods.add("static");
				if (scannedSTATIC) {
					reportParserError("Repeated modifier: static");
				}
				scannedSTATIC = true;
			} else if (have(ABSTRACT)) {
				mods.add("abstract");
				if (scannedABSTRACT) {
					reportParserError("Repeated modifier: abstract");
				}
				scannedABSTRACT = true;
			} else {
				more = false;
			}
		return mods;
	}

	/**
	 * Parse a class declaration.
	 * 
	 * <pre>
	 *   classDeclaration ::= CLASS IDENTIFIER 
	 *                        [EXTENDS qualifiedIdentifier] 
     *		                  [IMPLEMENTS qualifiedIdentifier {COMMA qualifiedIdentifier}] 
	 *                        classBody
	 * </pre>
	 * 
	 * A class which doesn't explicitly extend another (super) class implicitly
	 * extends the superclass java.lang.Object.
	 * 
	 * @param mods the class modifiers.
	 * @return an AST for a classDeclaration.
	 */

	private JClassDeclaration classDeclaration(ArrayList<String> mods) {
		int line = scanner.token().line();
		mustBe(CLASS);
		mustBe(IDENTIFIER);
		String name = scanner.previousToken().image();
		Type superClass;
		ArrayList<Type> implementsTypes = new ArrayList<Type>();
		if (have(EXTENDS)) {
			superClass = qualifiedIdentifier();
		} else {
			superClass = Type.OBJECT;
		}
		if (have(IMPLEMENTS)) {
			implementsTypes.add(qualifiedIdentifier());
			while (have(COMMA)) {
				implementsTypes.add(qualifiedIdentifier());
			}
		}
		return new JClassDeclaration(line, mods, name, superClass, implementsTypes, classBody());
	}


	/**
	 * Parse an interface declaration.
	 * 
	 * <pre>
	 *		interfaceDeclaration ::= INTERFACE IDENTIFIER 
     *                  [EXTENDS qualifiedIdentifier] 
     *                  interfaceBody
	 * </pre>
	 */

	private JInterfaceDeclaration interfaceDeclaration(ArrayList<String> mods) {
		int line = scanner.token().line();
		mustBe(INTERFACE);
		mustBe(IDENTIFIER);
		String name = scanner.previousToken().image();
		Type superClass;
		if (have(EXTENDS)) {
			superClass = qualifiedIdentifier();
		} else {
			superClass = Type.OBJECT;
		}
		return new JInterfaceDeclaration(line, mods, name, superClass, interfaceBody());
	}

	/**
	 * Parse a class body.
	 * 
	 * <pre>
	 *   classBody ::= LCURLY
	 *                   {modifiers classMemberDecl}
	 *                 RCURLY
	 * </pre>
	 * 
	 * @return list of members in the class body.
	 */

	private ArrayList<JMember> classBody() {
		ArrayList<JMember> members = new ArrayList<JMember>();
		mustBe(LCURLY);
		while (!see(RCURLY) && !see(EOF)) {
			members.add(classMemberDecl(modifiers()));
		}
		mustBe(RCURLY);
		return members;
	}

	/**
	 * Parse an interface body.
	 * 
	 * <pre>
	 *   classBody ::= LCURLY
	 *                   {modifiers interfaceMemberDecl}
	 *                 RCURLY
	 * </pre>
	 * 
	 * @return list of members in the interface body.
	 */

	private ArrayList<JMember> interfaceBody() {
		ArrayList<JMember> members = new ArrayList<JMember>();
		mustBe(LCURLY);
		while (!see(RCURLY) && !see(EOF)) {
			members.add(interfaceMemberDecl(modifiers()));
		}
		mustBe(RCURLY);
		return members;
	}

	/**
	 * Parse a class member declaration.
	 * 
	 * <pre>
	 *   classMemberDecl ::= IDENTIFIER            // constructor
	 *                    formalParameters
	 *                    block
	 *                | (VOID | type) IDENTIFIER  // method
	 *                    formalParameters
	 *                    (block | SEMI)
	 *                | type variableDeclarators SEMI
	 * </pre>
	 * 
	 * @param mods the class member modifiers.
	 * @return an AST for a memberDecl.
	 */

	private JMember classMemberDecl(ArrayList<String> mods) {
		int line = scanner.token().line();
		JMember memberDecl = null;
		if (see(LCURLY)) {
			// A block
			JBlock body = block();
			memberDecl = new JInitializationBlockDeclaration(line, mods, body);
		} else if (seeIdentLParen()) {
			// A constructor
			mustBe(IDENTIFIER);
			String name = scanner.previousToken().image();
			ArrayList<JFormalParameter> params = formalParameters();
			JBlock body = block();
			memberDecl = new JConstructorDeclaration(line, mods, name, params, body);
		} else {
			Type type = null;
			if (have(VOID)) {
				// void method
				type = Type.VOID;
				mustBe(IDENTIFIER);
				String name = scanner.previousToken().image();
				ArrayList<JFormalParameter> params = formalParameters();
				ArrayList<Type> throwTypes = throwTypes();
				JBlock body = have(SEMI) ? null : block();
				memberDecl = new JMethodDeclaration(line, mods, name, type, throwTypes, params, body);
			} else {
				type = type();
				if (seeIdentLParen()) {
					// Non void method
					mustBe(IDENTIFIER);
					String name = scanner.previousToken().image();
					ArrayList<JFormalParameter> params = formalParameters();
					ArrayList<Type> throwTypes = throwTypes();
					JBlock body = have(SEMI) ? null : block();
					memberDecl = new JMethodDeclaration(line, mods, name, type, throwTypes, params, body);
				} else {
					// Field
					memberDecl = new JFieldDeclaration(line, mods, variableDeclarators(type));
					mustBe(SEMI);
				}
			}
		}
		return memberDecl;
	}

	/**
	 * Parse an interface member declaration.
	 * 
	 * <pre>
	 *		interfaceMemberDecl ::=  (VOID | type) IDENTIFIER  // method
	 *						 formalParameters throwTypes
	 *						 SEMI
     *            			| type variableDeclarators SEMI // field
	 * </pre>
	 * 
	 * @param mods the class member modifiers.
	 * @return an AST for a memberDecl.
	 */

	private JMember interfaceMemberDecl(ArrayList<String> mods) {
		int line = scanner.token().line();
		JMember memberDecl = null;
		Type type = null;
		if (have(VOID)) {
			// void method
			type = Type.VOID;
			mustBe(IDENTIFIER);
			String name = scanner.previousToken().image();
			ArrayList<JFormalParameter> params = formalParameters();
			ArrayList<Type> throwTypes = throwTypes();
			mustBe(SEMI);
			memberDecl = new JMethodDeclaration(line, mods, name, type, throwTypes, params, null);
		} else {
			type = type();
			if (seeIdentLParen()) {
				// Non void method
				mustBe(IDENTIFIER);
				String name = scanner.previousToken().image();
				ArrayList<JFormalParameter> params = formalParameters();
				ArrayList<Type> throwTypes = throwTypes();
				mustBe(SEMI);
				memberDecl = new JMethodDeclaration(line, mods, name, type, throwTypes, params, null);
			} else {
				// Field
				memberDecl = new JFieldDeclaration(line, mods, variableDeclarators(type));
				mustBe(SEMI);
			}
		}
		return memberDecl;
	}

	/**
	 * Parse a block.
	 * 
	 * <pre>
	 *   block ::= LCURLY {blockStatement} RCURLY
	 * </pre>
	 * 
	 * @return an AST for a block.
	 */

	private JBlock block() {
		int line = scanner.token().line();
		ArrayList<JStatement> statements = new ArrayList<JStatement>();
		mustBe(LCURLY);
		while (!see(RCURLY) && !see(EOF)) {
			statements.add(blockStatement());
		}
		mustBe(RCURLY);
		return new JBlock(line, statements);
	}

	/**
	 * Parse a block statement.
	 * 
	 * <pre>
	 *   blockStatement ::= localVariableDeclarationStatement
	 *                    | statement
	 * </pre>
	 * 
	 * @return an AST for a blockStatement.
	 */

	private JStatement blockStatement() {
		if (seeLocalVariableDeclaration()) {
			return localVariableDeclarationStatement();
		} else {
			return statement();
		}
	}

	/**
	 * Parse a statement.
	 * 
	 * <pre>
	 *   statement ::= block
	 *               | IF parExpression statement [ELSE statement]
	 *               | WHILE parExpression statement
	        		 | FOR forExpression statement 
	 *               | RETURN [expression] SEMI
	 *               | SEMI 
	 *               | statementExpression SEMI
	 * </pre>
	 * 
	 * @return an AST for a statement.
	 */

	private JStatement statement() {
		int line = scanner.token().line();
		if (see(LCURLY)) {
			return block();
		} else if (have(IF)) {
			JExpression test = parExpression();
			JStatement consequent = statement();
			JStatement alternate = have(ELSE) ? statement() : null;
			return new JIfStatement(line, test, consequent, alternate);
		} else if (have(WHILE)) {
			JExpression test = parExpression();
			JStatement statement = statement();
			return new JWhileStatement(line, test, statement);
		} else if (have(FOR)) {
			JExpression initializer = null;
			JVariableDeclarator varDecl = null;
			JFormalParameter variable = null;
			JExpression exp2 = null;
			JExpression exp3 = null;
			mustBe(LPAREN);
			if (!have(SEMI)) {
				if (seeForEachExpression()) {
					variable = formalParameter();
					mustBe(COLON);
				} else if (seeLocalVariableDeclaration()) {
					varDecl = variableDeclarator(type());
					mustBe(SEMI);
				} else {
					initializer = expression();
					mustBe(SEMI);
				}
			}
			if (variable != null) {
				exp2 = expression();
			} else {
				if (!have(SEMI)) {
					exp2 = expression();
					mustBe(SEMI);
				}
				if (!see(RPAREN)) {
					exp3 = expression();
				}
			}
			mustBe(RPAREN);
			JStatement body = statement();
			if (variable != null) {
				return new JForEachStatement(line, variable, exp2, body);
			} else if (varDecl != null) {
				return new JForStatement(line, varDecl, exp2, exp3, body);
			} else {
				return new JForStatement(line, initializer, exp2, exp3, body);
			}
		} else if (have(TRY)) {
			JStatement tryBlock = statement();
			ArrayList<JStatement> catchBlocks = new ArrayList<JStatement>();
            ArrayList<JFormalParameter> exceptionsToCatch = new ArrayList<JFormalParameter>();
			while (have(CATCH)) {
				mustBe(LPAREN);
				exceptionsToCatch.add(formalParameter());
				mustBe(RPAREN);
				catchBlocks.add(statement());
			}
			JStatement finallyBlock = null;
			if (have(FINALLY)) {
				finallyBlock = statement();
			}
			return new JTryCatchFinallyStatement(line, tryBlock, catchBlocks, exceptionsToCatch, finallyBlock);
		} else if (have(THROW)) {
			JExpression expr = expression();
			mustBe(SEMI);
			return new JThrowStatement(line, expr);
		} else if (have(RETURN)) {
			if (have(SEMI)) {
				return new JReturnStatement(line, null);
			} else {
				JExpression expr = expression();
				mustBe(SEMI);
				return new JReturnStatement(line, expr);
			}
		} else if (have(SEMI)) {
			return new JEmptyStatement(line);
		} else { // Must be a statementExpression
			JStatement statement = statementExpression();
			mustBe(SEMI);
			return statement;
		}
	}

	/**
	 * Parse formal parameters.
	 * 
	 * <pre>
	 *   formalParameters ::= LPAREN 
	 *                          [formalParameter 
	 *                            {COMMA  formalParameter}]
	 *                        RPAREN
	 * </pre>
	 * 
	 * @return a list of formal parameters.
	 */

	private ArrayList<JFormalParameter> formalParameters() {
		ArrayList<JFormalParameter> parameters = new ArrayList<JFormalParameter>();
		mustBe(LPAREN);
		if (have(RPAREN))
			return parameters; // ()
		do {
			parameters.add(formalParameter());
		} while (have(COMMA));
		mustBe(RPAREN);
		return parameters;
	}

	/**
	 * Parse a formal parameter.
	 * 
	 * <pre>
	 *   formalParameter ::= type IDENTIFIER
	 * </pre>
	 * 
	 * @return an AST for a formalParameter.
	 */

	private JFormalParameter formalParameter() {
		int line = scanner.token().line();
		Type type = type();
		mustBe(IDENTIFIER);
		String name = scanner.previousToken().image();
		return new JFormalParameter(line, name, type);
	}
	
	/**
	 * Parse a (list of) thrown exception types
	 * 
	 * <pre>
	 *   throwTypes ::= [THROWS qualifiedIdentifier {COMMA qualifiedIdentifier}]
	 * </pre>
	 * 
	 * @return a list of AST for throwTypes
	 */
	private ArrayList<Type> throwTypes() {
		ArrayList<Type> throwTypes = new ArrayList<Type>();
		if (have(THROWS)) {
			throwTypes.add(qualifiedIdentifier());
		}
		while (have(COMMA)) {
			throwTypes.add(qualifiedIdentifier());
		}
		return throwTypes;
	}

	/**
	 * Parse a parenthesized expression.
	 * 
	 * <pre>
	 *   parExpression ::= LPAREN expression RPAREN
	 * </pre>
	 * 
	 * @return an AST for a parExpression.
	 */

	private JExpression parExpression() {
		mustBe(LPAREN);
		JExpression expr = expression();
		mustBe(RPAREN);
		return expr;
	}

	/**
	 * Parse a local variable declaration statement.
	 * 
	 * <pre>
	 *   localVariableDeclarationStatement ::= type 
	 *                                           variableDeclarators 
	 *                                             SEMI
	 * </pre>
	 * 
	 * @return an AST for a variableDeclaration.
	 */

	private JVariableDeclaration localVariableDeclarationStatement() {
		int line = scanner.token().line();
		ArrayList<String> mods = new ArrayList<String>();
		ArrayList<JVariableDeclarator> vdecls = variableDeclarators(type());
		mustBe(SEMI);
		return new JVariableDeclaration(line, mods, vdecls);
	}

	/**
	 * Parse variable declarators.
	 * 
	 * <pre>
	 *   variableDeclarators ::= variableDeclarator 
	 *                             {COMMA variableDeclarator}
	 * </pre>
	 * 
	 * @param type type of the variables.
	 * @return a list of variable declarators.
	 */

	private ArrayList<JVariableDeclarator> variableDeclarators(Type type) {
		ArrayList<JVariableDeclarator> variableDeclarators = new ArrayList<JVariableDeclarator>();
		do {
			variableDeclarators.add(variableDeclarator(type));
		} while (have(COMMA));
		return variableDeclarators;
	}

	/**
	 * Parse a variable declarator.
	 * 
	 * <pre>
	 *   variableDeclarator ::= IDENTIFIER
	 *                          [ASSIGN variableInitializer]
	 * </pre>
	 * 
	 * @param type type of the variable.
	 * @return an AST for a variableDeclarator.
	 */

	private JVariableDeclarator variableDeclarator(Type type) {
		int line = scanner.token().line();
		mustBe(IDENTIFIER);
		String name = scanner.previousToken().image();
		JExpression initial = have(ASSIGN) ? variableInitializer(type) : null;
		return new JVariableDeclarator(line, name, type, initial);
	}

	/**
	 * Parse a variable initializer.
	 * 
	 * <pre>
	 *   variableInitializer ::= arrayInitializer
	 *                         | expression
	 * </pre>
	 * 
	 * @param type type of the variable.
	 * @return an AST for a variableInitializer.
	 */

	private JExpression variableInitializer(Type type) {
		if (see(LCURLY)) {
			return arrayInitializer(type);
		}
		return expression();
	}

	/**
	 * Parse an array initializer.
	 * 
	 * <pre>
	 *   arrayInitializer ::= LCURLY 
	 *                          [variableInitializer 
	 *                            {COMMA variableInitializer} [COMMA]]
	 *                        RCURLY
	 * </pre>
	 * 
	 * @param type type of the array.
	 * @return an AST for an arrayInitializer.
	 */
